<resources>
    <string name="app_name">WszystkoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nadaj">Nadaj</string>
    <string name="odbierz">Odbierz</string>
    <string name="sledz_paczk">Śledź paczkę</string>
    <string name="zaloguj_sie">Zaloguj się</string>
    <string name="telefon">Telefon</string>
    <string name="np_321_234_132">np. 321 234 132</string>
    <string name="haslo">Hasło</string>
    <string name="zarejestruj_sie">Zarejestruj się</string>
    <string name="lub">lub</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="dane_nadawcy">  Dane nadawcy</string>
    <string name="dane_odbiorcy">  Dane odbiorcy</string>
    <string name="adres_paczkomatu">  Adres paczkomatu</string>
    <string name="e_mail">E-mail</string>
    <string name="imie">Imie</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="platnosc">Przejdź do płatności</string>
    <string name="platnosc_1">Płatność</string>
    <string name="wielkosc_paczki">Wielkość paczki</string>
    <string name="srednia">Średnia</string>
    <string name="mala">Mała</string>
    <string name="duza">Duża</string>

    <string-array name="Adres">
        <item>Warszaw 37-281, ul. Kościuszki 4</item>
        <item>Kraków 21-322, ul. Majowa 23</item>
        <item>Rzeszów 12-111, ul. Pokojowa 88</item>

    </string-array>
</resources>