<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/baseline_file_download_24"
            android:title="@string/nadaj" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_file_download_24"
            android:title="@string/odbierz" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_check_box_outline_blank_24"
            android:title="@string/sledz_paczk" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/zaloguj_sie" />

    </group>
</menu>