<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wszystkoapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.wszystkoapp.ui.gallery.GalleryFragment"
        android:label="@string/odbierz"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.wszystkoapp.ui.slideshow.SlideshowFragment"
        android:label="@string/sledz_paczk"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.wszystkoapp.ui.send.Send"
        android:label="@string/nadaj"
        tools:layout="@layout/fragment_send" />


    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.wszystkoapp.ui.login.LoginFragment"
        android:label="@string/zaloguj_sie"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.wszystkoapp.ui.payment.PaymentFragment"
        android:label="@string/platnosc_1"
        tools:layout="@layout/fragment_payment" />

</navigation>