<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        <TextView
            android:id="@+id/textView10"
            android:layout_width="414dp"
            android:layout_height="56dp"
            android:background="#8F7FC776"
            android:gravity="center"
            android:text="@string/wielkosc_paczki"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
        <RadioButton
            android:id="@+id/mala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mala"
            />

        <RadioButton
            android:id="@+id/srednia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srednia"
            />

        <RadioButton
            android:id="@+id/duza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duza"
            />
        </RadioGroup>
        <TextView
        android:id="@+id/textView7"
        android:layout_width="414dp"
        android:layout_height="56dp"
        android:background="#8F7FC776"
        android:gravity="center"
        android:text="@string/dane_odbiorcy"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/imie_odbiorca"
            android:layout_width="220dp"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/imie"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077" />

        <EditText
            android:id="@+id/nazwisko_odbiorca"
            android:layout_width="220dp"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/nazwisko"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <EditText
            android:id="@+id/email_odbiorca"
            android:layout_width="220dp"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.271" />

        <EditText
            android:id="@+id/telefon_odbiorca"
            android:layout_width="220dp"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/telefon"
            android:inputType="phone"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="409dp"
        android:layout_height="58dp"
        android:background="#8F7FC776"
        android:gravity="center"
        android:text="@string/dane_nadawcy"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />



    <EditText
        android:id="@+id/imie_nadawca"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/imie"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/nazwisko_nadawca"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/nazwisko"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <EditText
        android:id="@+id/email_nadawca"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <EditText
        android:id="@+id/telefon_nadawca"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/telefon"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="414dp"
            android:layout_height="59dp"
            android:background="#8F7FC776"
            android:gravity="center"
            android:text="@string/adres_paczkomatu"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="57dp"
             />


        <Button
            android:id="@+id/button_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#7FC776"
            android:text="@string/platnosc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.519" />


    </TableLayout>
</ScrollView>